--- a/notebooks/Word2Vec_patrones.ipynb
+++ b/notebooks/Word2Vec_patrones.ipynb
@@ -153,12 +153,12 @@
     {
      "data": {
       "text/plain": [
-       "array([-0.00862329,  0.00812008,  0.00130041, -0.0041394 , -0.00798857,\n",
-       "       -0.01533671, -0.00562356, -0.01274933,  0.0041844 ,  0.00454563,\n",
-       "       -0.01585791,  0.00061122, -0.01599782, -0.01322332,  0.00439464,\n",
-       "       -0.01133921,  0.01029718,  0.01104028, -0.00222819,  0.00965242,\n",
-       "       -0.00386849,  0.01294265, -0.01209119, -0.00564239, -0.016519  ,\n",
-       "       -0.00571647,  0.00835573, -0.00107087, -0.00299215,  0.01644304],\n",
+       "array([ 0.00972736, -0.0107098 , -0.01514896,  0.0042434 ,  0.00538688,\n",
+       "        0.00406535, -0.01456527,  0.01199456, -0.01427293,  0.00793729,\n",
+       "        0.00606461,  0.00058371,  0.0135619 , -0.00690492, -0.00264248,\n",
+       "        0.00807015,  0.01559642, -0.00769645,  0.01210816,  0.01274363,\n",
+       "        0.00639478,  0.01388766, -0.01160857,  0.00232113,  0.00740734,\n",
+       "       -0.01401621, -0.00465767,  0.0034525 ,  0.00415783,  0.00938516],\n",
        "      dtype=float32)"
       ]
      },
@@ -179,7 +179,7 @@
     {
      "data": {
       "text/plain": [
-       "-0.016518999"
+       "-0.015148963"
       ]
      },
      "execution_count": 12,
@@ -199,7 +199,7 @@
     {
      "data": {
       "text/plain": [
-       "0.016443038"
+       "0.015596422"
       ]
      },
      "execution_count": 13,
@@ -223,29 +223,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
-    "no2 = sorted(normalizado)"
+    "#no2 = sorted(normalizado)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
-    "no3 = sorted(normalizado,key = lambda a: a%2 == 0)"
+    "#no3 = sorted(normalizado,key = lambda a: a%2 == 0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
-    "no4= sorted(no3)"
+    "#no4= sorted(no3)"
    ]
   },
   {
@@ -254,7 +254,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "todas = [normalizado,no3,no3,no4]"
+    "#todas = [normalizado,no3,no3,no4]"
    ]
   },
   {
@@ -263,18 +263,47 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "normalizado = [a for b in todas for a in b]"
+    "#normalizado = [a for b in todas for a in b]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "normalizado = np.asarray(normalizado)\n",
-    "normalizado2 = np.sort(normalizado,kind='mergesort')"
+    "normalizado2 = np.sort(normalizado)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([  0,  18,  28,  36, 114, 143, 240, 265, 338, 403, 507, 563, 599,\n",
+       "       619, 622, 625, 661, 683, 694, 727, 744, 748, 790, 801, 874, 878,\n",
+       "       899, 925, 935, 991])"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "normalizado2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
