Organizando un programa que llame a todas las funciones y lo haga todo solo, metiendo voz y gamas de colores

--- a/notebooks/Colores.ipynb
+++ b/notebooks/Colores.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,11 +132,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "colores.to_csv(\"data/colores.csv\")"
+    "#colores.to_csv(\"data/colores.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pos0= colores.iloc[176:251]\n",
+    "pos1 = colores.iloc[0:3]\n",
+    "pos2= colores.iloc[8:11]\n",
+    "pos3 = colores.iloc[15:18]\n",
+    "pos4 = colores.iloc[477:479]\n",
+    "pos5 = colores.iloc[976:977]\n",
+    "pos6 = colores.iloc[976:977]\n",
+    "positivo = pd.concat([pos0,pos1,pos2,pos3,pos4,pos5,pos6])\n",
+    "positivo = positivo.reset_index(drop=True)\n",
+    "positivo.to_csv(\"../data/positivos.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "neu0 = colores.iloc[535:662]\n",
+    "neu1 = colores.iloc[523:517]\n",
+    "neu2 = colores.iloc[504:509]\n",
+    "neutros = pd.concat([neu0,neu1,neu2])\n",
+    "neutros = neutros.reset_index(drop=True)\n",
+    "neutros.to_csv(\"../data/neutros.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "neg0 = colores.iloc[483:553]\n",
+    "neg1 = colores.iloc[589:593]\n",
+    "neg2 = colores.iloc[597:600]\n",
+    "neg3 = colores.iloc[604:607]\n",
+    "neg4 = colores.iloc[618:620]\n",
+    "neg5 = colores.iloc[625:627]\n",
+    "neg6 = colores.iloc[949:963]\n",
+    "neg7 = colores.iloc[928:931]\n",
+    "neg8 = colores.iloc[111:139]\n",
+    "negativos = pd.concat([neg0,neg1,neg2,neg3,neg4,neg5,neg6,neg7,neg8])\n",
+    "negativos = negativos.reset_index(drop=True)\n",
+    "negativos.to_csv(\"../data/negativos.csv\")"
    ]
   },
   {
