--- a/notebooks/Reconocedor de voz.ipynb
+++ b/notebooks/Reconocedor de voz.ipynb
@@ -35,10 +35,10 @@
    ],
    "source": [
     "with sr.Microphone() as source:\n",
-    "    print(\"di algo\")\n",
+    "    print(\"Expresa algo\")\n",
     "    #audio = r.listen(source)\n",
-    "    audio1 = r.record(source, duration=4)\n",
-    "    print(\"ok\")\n",
+    "    audio1 = r.record(source, duration=5)\n",
+    "    print(\"Grabación terminada. Procesando...\")\n",
     "    texto = r.recognize_google(audio1,language = 'es_ES')\n",
     "print(texto)\n",
     "#print(\"Has dicho: \"+ r.recognize_google(audio1, language = 'es_ES'))"
