--- a/notebooks/Reconocedor de voz.ipynb
+++ b/notebooks/Reconocedor de voz.ipynb
@@ -6,7 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import speech_recognition as sr"
+    "import speech_recognition as sr\n",
+    "from numpy.fft import fft"
    ]
   },
   {
@@ -20,16 +21,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "di algo\n",
-      "ok\n",
-      "hola hola hola hola hola hola\n"
+      "Expresa algo\n",
+      "Grabación terminada. Procesando...\n",
+      "hola hola hola esto es una prueba que pasa\n"
      ]
     }
    ],
@@ -37,37 +38,22 @@
     "with sr.Microphone() as source:\n",
     "    print(\"Expresa algo\")\n",
     "    #audio = r.listen(source)\n",
-    "    audio1 = r.record(source, duration=5)\n",
+    "    audio = r.record(source, duration=5)\n",
     "    print(\"Grabación terminada. Procesando...\")\n",
-    "    texto = r.recognize_google(audio1,language = 'es_ES')\n",
+    "    texto = r.recognize_google(audioa,language = 'es_ES')\n",
     "print(texto)\n",
     "#print(\"Has dicho: \"+ r.recognize_google(audio1, language = 'es_ES'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'hola hola hola hola hola hola'"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "with open(\"microphone-results.wav\", \"wb\") as f:\n",
+    "    f.write(audio.get_wav_data())"
+   ]
   }
  ],
  "metadata": {
