--- a/notebooks/Colores.ipynb
+++ b/notebooks/Colores.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,11 +141,221 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def dataFra(lista,nombre):\n",
+    "    listadata = []\n",
+    "    for a in lista:\n",
+    "        listadata.append(colores.iloc[a[0]:a[1]])\n",
+    "    data = pd.concat(listadata)\n",
+    "    data = data.reset_index(drop=True)\n",
+    "    data.to_csv(f\"../data/{nombre}.csv\")\n",
+    "    return None\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "listapositivos = [[0,45],[150,286],[477,479],[976,977]]\n",
+    "positivos = \"probando\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataFra(listapositivos,positivos)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>color</th>\n",
+       "      <th>codigo</th>\n",
+       "      <th>RGB</th>\n",
+       "      <th>R</th>\n",
+       "      <th>G</th>\n",
+       "      <th>B</th>\n",
+       "      <th>visual</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Process Yellow</td>\n",
+       "      <td>#f7e214</td>\n",
+       "      <td>(247, 226, 20)</td>\n",
+       "      <td>247</td>\n",
+       "      <td>226</td>\n",
+       "      <td>20</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>PMS 100</td>\n",
+       "      <td>#f4ed7c</td>\n",
+       "      <td>(244, 237, 124)</td>\n",
+       "      <td>244</td>\n",
+       "      <td>237</td>\n",
+       "      <td>124</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>PMS 101</td>\n",
+       "      <td>#f4ed47</td>\n",
+       "      <td>(244, 237, 71)</td>\n",
+       "      <td>244</td>\n",
+       "      <td>237</td>\n",
+       "      <td>71</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>PMS 102</td>\n",
+       "      <td>#f9e814</td>\n",
+       "      <td>(249, 232, 20)</td>\n",
+       "      <td>249</td>\n",
+       "      <td>232</td>\n",
+       "      <td>20</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Pantone Yellow</td>\n",
+       "      <td>#ad9b0c</td>\n",
+       "      <td>(173, 155, 12)</td>\n",
+       "      <td>173</td>\n",
+       "      <td>155</td>\n",
+       "      <td>12</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>284</th>\n",
+       "      <td>PMS 2746</td>\n",
+       "      <td>#3f2893</td>\n",
+       "      <td>(63, 40, 147)</td>\n",
+       "      <td>63</td>\n",
+       "      <td>40</td>\n",
+       "      <td>147</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>285</th>\n",
+       "      <td>PMS 2756</td>\n",
+       "      <td>#332875</td>\n",
+       "      <td>(51, 40, 117)</td>\n",
+       "      <td>51</td>\n",
+       "      <td>40</td>\n",
+       "      <td>117</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>477</th>\n",
+       "      <td>PMS 3945</td>\n",
+       "      <td>#efea07</td>\n",
+       "      <td>(239, 234, 7)</td>\n",
+       "      <td>239</td>\n",
+       "      <td>234</td>\n",
+       "      <td>7</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>478</th>\n",
+       "      <td>PMS 3955</td>\n",
+       "      <td>#ede211</td>\n",
+       "      <td>(237, 226, 17)</td>\n",
+       "      <td>237</td>\n",
+       "      <td>226</td>\n",
+       "      <td>17</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>976</th>\n",
+       "      <td>PMS 806</td>\n",
+       "      <td>#f7027c</td>\n",
+       "      <td>(247, 2, 124)</td>\n",
+       "      <td>247</td>\n",
+       "      <td>2</td>\n",
+       "      <td>124</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>184 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              color   codigo              RGB    R    G    B visual\n",
+       "0    Process Yellow  #f7e214   (247, 226, 20)  247  226   20       \n",
+       "1           PMS 100  #f4ed7c  (244, 237, 124)  244  237  124       \n",
+       "2           PMS 101  #f4ed47   (244, 237, 71)  244  237   71       \n",
+       "3           PMS 102  #f9e814   (249, 232, 20)  249  232   20       \n",
+       "4    Pantone Yellow  #ad9b0c   (173, 155, 12)  173  155   12       \n",
+       "..              ...      ...              ...  ...  ...  ...    ...\n",
+       "284        PMS 2746  #3f2893    (63, 40, 147)   63   40  147       \n",
+       "285        PMS 2756  #332875    (51, 40, 117)   51   40  117       \n",
+       "477        PMS 3945  #efea07    (239, 234, 7)  239  234    7       \n",
+       "478        PMS 3955  #ede211   (237, 226, 17)  237  226   17       \n",
+       "976         PMS 806  #f7027c    (247, 2, 124)  247    2  124       \n",
+       "\n",
+       "[184 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pos0= colores.iloc[0:45]\n",
+    "pos0= colores.iloc\n",
     "pos1 = colores.iloc[150:286]\n",
     "pos2 = colores.iloc[477:479]\n",
     "pos3 = colores.iloc[976:977]\n",
